--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Duera Bold";
+    src: url('./fonts/Duera-ExpaBold-PERSONAL.ttf')
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -7,42 +12,62 @@
     box-sizing: border-box;
 }
 
-/* CAT EYES STYLING */
+.hide {
+    display: none;
+}
+
+/* CONTAINER BACKGROUND */
+
+.container-all {
+    background-image: url(./img/background.png);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* TITLE + CAT HEAD CONTAINER */
+
+header {
+    margin: 0 auto;
+    position: relative;
+    max-width: 500px;
+    margin-bottom: 3%;
+}
+
+/* TITLE IMG  */
+
+.title {
+    max-width: 500px;
+}
+
+/* CAT HEAD STYLING */
 
 .cat-head-container {
-    width: 291px;
-    /* height: 150px; */
     position: relative;
-    background-color: blanchedalmond;
-    top: 200px;
-    left: 150px;
-}
-
-.cat-eye-container {
-    position: absolute;
-    top: 78px;
-    left: 57px;
-}
-
-.cat-eye-container2 {
-    position: absolute;
-    top: 78px;
-    left: 166px;
+    width: 291px;
+    top: 20px;
+    left: -50px;
+    transform: rotate(-7deg);
 }
 
 .cat-eye {
+    position: absolute;
+    top: 78px;
+    left: 57px;
     width: 70px;
     height: 33.5px;
-    position: relative;
     border: 1px solid transparent;
-    /* overflow: hidden; */
+    overflow: hidden;
     border-radius: 53% 47% 59% 42% / 56% 40% 58% 39%;
 }
 
 .cat-eye2 {
+    position: absolute;
+    top: 78px;
+    left: 166px;
     width: 70px;
     height: 33.5px;
-    position: relative;
     border: 1px solid transparent;
     overflow: hidden;
     border-radius: 42% 59% 47% 53% / 40% 56% 39% 58%;
@@ -56,8 +81,83 @@
     transform: rotate(40deg);
     position: absolute;
     left: 15px;
-    bottom: 0;
-    top: -2px;
+    top: 0; 
 }
 
+/* BUTTON STYLING */
+.svg {
+    width: 500px;
+    position: absolute;
+    top: 0px;
+    left: -60px;
+    pointer-events: none;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5%px;
+} 
+
+.button-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 370px;
+    min-height: 250px;
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.12);
+    border-radius: 12px;
+    transition: box-shadow 0.3s ease;
+    /* transition: all 0.3s ease; */
+}
+
+.button-container:not(:first-child) {
+    margin-left: 24px;
+}
+
+.button-container:hover {
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.26);
+    animation: shake 1.5s;
+}
+
+@keyframes shake {
+    10%, 90% {
+        transform: translateY(-1px);
+    }
+      
+    20%, 80% {
+    transform: translateY(2px);
+    }
+
+    30%, 50%, 70% {
+    transform: translateY(-3px);
+    }
+
+    40%, 60% {
+    transform: translateY(3px);
+    }
+}
+
+.button-container:hover::after {
+    content: '';
+    position: absolute;
+    top: 184px;
+    height : 0;
+    width : 0;
+    border-right : 12px solid transparent;
+    border-bottom : 17px solid black;
+    border-left : 12px solid transparent;
+}
+
+.button-container span {
+    display: block;
+    text-transform: uppercase;
+    font-family: 'Duera Bold';
+    font-size: 3.5em;
+    letter-spacing: 0.02em;
+    line-height: 84%;
+}
 
