--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,7 @@
 .container-all {
     background-image: url(./img/background.png);
     height: 100vh;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -125,7 +126,6 @@ main {
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.12);
     border-radius: 12px;
     transition: box-shadow 0.3s ease;
-    /* transition: all 0.3s ease; */
 }
 
 .button-container:not(:first-child) {
@@ -174,4 +174,3 @@ main {
     letter-spacing: 0.02em;
     line-height: 84%;
 }
-
