--- a/style/catSnake.css
+++ b/style/catSnake.css
@@ -3,6 +3,11 @@
     src: url('./fonts/Duera-ExpaBold-PERSONAL.ttf')
 }
 
+@font-face {
+    font-family: "Duera";
+    src: url('./fonts/Duera-ExpaMedi-PERSONAL.ttf')
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -17,22 +22,28 @@
     height: 100vh;
     overflow: hidden;
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.container-elements {
+    width: 1120px;
+    display: flex;
+    justify-content: space-between;
 }
 
 /* GAME BOARD */
 
 #game-board {
     position: relative;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
     width: 600px;
     height: 600px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.26);
-    border-radius: 12px;
+    border-radius: 6px;
     background-color: white;
 }
 
@@ -46,7 +57,78 @@
     opacity: 0.07;
 }
 
-.tile {
+.cat-head {
     background-image: url(./img/Catface.svg);
     background-size: cover;
+} 
+
+.fish-alive {
+    background-image: url(./img/Fish_alive.svg);
+    background-size: cover;
 }
+
+.fish-dead {
+    background-image: url(./img/Fish_dead.svg);
+    background-size: cover;
+}
+
+/* LEFT SIDE  */
+
+.left-elements {
+    position: relative;
+    top: 10%;
+    align-self: flex-start;
+    width: 10%;
+}
+
+.left-elements a {
+    display: inline-block;
+    background-color: white;
+    width: 60px;
+    height: 60px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.12);
+    border-radius: 12px;
+}
+
+.arrow-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-elements p {
+    position: relative;
+    top: 50px;
+    writing-mode:vertical-rl;
+    font-family: 'Duera Bold';
+    font-size: 44px;
+    line-height: 100%;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+}
+
+/* RIGHT SIDE  */
+.right-elements {
+    min-width: 220px;
+}
+.right-elements p:nth-child(1){
+    text-align: end;
+    font-family: 'Duera Bold';
+    font-size: 56px;
+    line-height: 90%;
+    margin-bottom: 8px;
+}
+
+.right-elements p:nth-child(2){
+    text-align: end;
+    font-family: 'Duera';
+    font-size: 26px;
+    line-height: 100%;
+    text-transform: uppercase;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+
+
