--- a/style/catSnake.css
+++ b/style/catSnake.css
@@ -32,12 +32,15 @@
     justify-content: space-between;
 }
 
+.hide {
+    display: none;
+}
+
 /* GAME BOARD */
 
 #game-board {
+    display:grid;
     position: relative;
-    /* margin: 0 auto; */
-    display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
     width: 600px;
@@ -130,5 +133,108 @@
     color: rgba(0, 0, 0, 0.7);
 }
 
+/* WIN-LOST STYLE  */
 
+.lose-container {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(2px);
+    border-radius: 6px;
+    z-index: 1;
+}
 
+.lose-container p {
+    margin-bottom: 64px;
+    font-family: 'Duera Bold';
+    font-size: 64px;
+    line-height: 90%;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+    color: white;
+}
+
+#restart {
+    margin-bottom: 32px;
+    background-color: white;
+    font-size: 28px;
+    color: #1F180F;
+}
+
+#back-home {
+    background-color: #909090;
+    font-size: 20px;
+    color: white;
+}
+
+.link-style {
+    display: block;
+    padding: 32px 40px 24px;
+    text-decoration: none;
+    text-transform: uppercase;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.12);
+    border-radius: 12px;
+    line-height: 84%;
+    letter-spacing: 0.02em;
+    font-family: 'Duera Bold';
+}
+
+/* INTRO STYLE  */
+
+.intro-game {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgb(255, 255, 255, 0.5);
+}
+
+.intro-game p:nth-child(1) {
+    margin-bottom: 55px;
+    font-family: 'Duera Bold';
+    font-size: 35px;
+    line-height: 90%;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+    color: rgba(0, 0, 0, 1);
+
+}
+
+.intro-game p:nth-child(3) {
+    margin-top: 24px;
+    margin-bottom: 80px;
+    font-family: 'Duera Bold';
+    font-size: 20px;
+    line-height: 100%;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.intro-game .link-style {
+    background-color: white;
+    color: #1F180F;
+    border: none;
+    cursor: pointer; 
+}
+
+.intro-game .link-style:active {
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.12);
+    outline: 0;
+}
+
+.hide {
+    display: none;
+}
