--- a/style/getEm.css
+++ b/style/getEm.css
@@ -70,6 +70,7 @@
 /* LEFT SIDE  */
 
 .left-elements {
+    min-width: 210px;
     position: relative;
     top: 10%;
     align-self: flex-start;
@@ -106,13 +107,13 @@
 
 /* RIGHT SIDE  */
 .right-elements {
-    min-width: 220px;
+    min-width: 210px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
 
-.right-elements p:nth-child(1), .right-elements p:nth-child(3){
+.right-elements p:nth-child(2), .right-elements p:nth-child(4){
     text-align: end;
     font-family: 'Duera Bold';
     font-size: 56px;
@@ -120,7 +121,7 @@
     margin-bottom: 8px;
 }
 
-.right-elements p:nth-child(2), .right-elements p:nth-child(4){
+.right-elements p:nth-child(3), .right-elements p:nth-child(5){
     margin-bottom: 40px;
     text-align: end;
     font-family: 'Duera';
@@ -131,6 +132,10 @@
 }
 
 /* AUDIO STYLE  */
+
+.audio {
+    margin-bottom: 40px;
+}
 
 #play, #pause {
     background-color: transparent;
