--- a/style/getEm.css
+++ b/style/getEm.css
@@ -277,3 +277,116 @@
         opacity: 1;
     }
 }
+
+#pad-touch-container {
+    display: none;
+}
+
+@media only screen and (max-width: 1010px) {
+    .container-elements {
+        width: 100%;
+        justify-content: center;
+    }
+
+    #game-board {
+        width: 500px;
+        height: 500px;
+    }
+
+    /* INTRO  */
+    .intro-game p:nth-child(1) {
+        margin-bottom: 5%;
+        font-size: 25px;
+        line-height: 90%;
+    
+    }
+    
+    .intro-game p:nth-child(3) {
+        display: none;
+    }
+
+    .link-style {
+        padding: 20px 18px 12px;
+        text-decoration: none;
+    }
+
+    .intro-game img {
+        display: none;
+    }
+
+    /* PAD THING  */
+
+    #pad-touch-container {
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #pad-touch-container img {
+        width: 60px;
+    }
+
+    #left {
+        transform: rotate(-90deg);
+    }
+
+    #down {
+        transform: rotate(180deg);
+    }
+
+    #right {
+        transform: rotate(90deg);
+    }
+
+    /* LEFT  */
+
+    .left-elements p {
+        display: none;
+    }
+
+    .left-elements {
+        position: absolute;
+        width: 0;
+        top: 10px;
+        left: 10px;
+    }
+
+    /* RIGHT  */
+
+    .right-elements {
+        position: absolute;
+        width: 0;
+        top: 10px;
+        right: 10px;
+    }
+
+    .right-elements p:nth-child(2), .right-elements p:nth-child(4) {
+        font-size: 24px;
+        margin-bottom: 0;
+    }
+    
+    .right-elements p:nth-child(3), .right-elements p:nth-child(5) {
+        font-size: 14px;
+        margin-bottom: 0;
+    }
+
+    .audio {
+        margin-bottom: 2%;
+    }
+
+    /* WIN-LOST */
+
+    .lose-container p {
+        margin-bottom: 5%;
+        font-size: 40px;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    #game-board {
+        width: 310px;
+        height: 310px;
+    }
+}
