--- a/style/style.css
+++ b/style/style.css
@@ -118,7 +118,7 @@ header {
 main {
     display: flex;
     justify-content: center;
-    margin-bottom: 5%px;
+    margin-bottom: 5px;
 } 
 
 .button-container {
@@ -205,4 +205,48 @@ main {
 
 .hide {
     display: none;
+}
+
+@media only screen and (max-width: 850px) {
+    .audio {
+        top: 10px;
+        right: 20px;
+    }
+
+    .cat-head-container {
+        position: relative;
+        left: -15px;
+    }
+
+    .title {
+        max-width: 200px;
+        margin-bottom: 5%;
+        position: relative;
+        left: 50px;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    } 
+
+    .button-container {
+        min-width: 270px;
+        min-height: 150px;
+    }
+
+    .button-container:not(:first-child) {
+        margin-left: 0;
+    }
+
+    .button-container span {
+        font-size: 2em;
+        letter-spacing: 0.02em;
+        line-height: 84%;
+    }
+    
+    .button-container:nth-child(1) {
+        margin-bottom: 2%;
+    }
 }
