--- a/style/getEm.css
+++ b/style/getEm.css
@@ -289,8 +289,8 @@
     }
 
     #game-board {
-        width: 500px;
-        height: 500px;
+        width: 400px;
+        height: 400px;
     }
 
     /* INTRO  */
@@ -318,26 +318,22 @@
 
     #pad-touch-container {
         position: absolute;
-        bottom: 0;
+        bottom: 10px;
         display: flex;
-        flex-direction: column;
         align-items: center;
     }
 
     #pad-touch-container img {
-        width: 60px;
+        width: 40px;
     }
 
     #left {
         transform: rotate(-90deg);
     }
 
-    #down {
-        transform: rotate(180deg);
-    }
-
     #right {
         transform: rotate(90deg);
+        margin-left: 10px;
     }
 
     /* LEFT  */
@@ -363,12 +359,12 @@
     }
 
     .right-elements p:nth-child(2), .right-elements p:nth-child(4) {
-        font-size: 24px;
+        font-size: 22px;
         margin-bottom: 0;
     }
     
     .right-elements p:nth-child(3), .right-elements p:nth-child(5) {
-        font-size: 14px;
+        font-size: 10px;
         margin-bottom: 0;
     }
 
@@ -388,5 +384,9 @@
     #game-board {
         width: 310px;
         height: 310px;
+    }
+
+    #pad-touch-container img {
+        width: 60px;
     }
 }
