--- a/style/getEm.css
+++ b/style/getEm.css
@@ -238,7 +238,7 @@
 
 .lose-container p {
     margin-bottom: 64px;
-    font-family: 'Duera';
+    font-family: 'Duera Bold';
     font-size: 32px;
     line-height: 80%;
     text-align: center;
