--- a/style/getEm.css
+++ b/style/getEm.css
@@ -247,7 +247,7 @@
     margin-bottom: 64px;
     font-family: 'Duera Bold';
     font-size: 32px;
-    line-height: 10px;
+    line-height: 1em;
     text-align: center;
     letter-spacing: 0.02em;
     /*text-transform: uppercase;*/
