--- a/style/getEm.css
+++ b/style/getEm.css
@@ -628,12 +628,14 @@
     color: #333333;
     margin-bottom: 1rem;
     text-align: center;
+    line-height: 2em;
 }
 @media (min-width: 300px) and (max-width: 600px) {
     .note__text p {
         font-family: 'Allura';
         font-size: 1.025rem;
         color: #333333;
+        line-height: 2em;
    }
 }
 @media (min-width: 600px) {
@@ -641,6 +643,7 @@
         font-family: 'Allura';
         font-size: 1.15rem;
         color: #333333;
+        line-height: 2em;
    }
 }
 .scissors {
