--- a/style/getEm.css
+++ b/style/getEm.css
@@ -151,6 +151,15 @@
 
 /* LEFT SIDE  */
 
+.bottom-elements {
+    min-width: 210px;
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+    font-family: 'Duera';
+    font-size: 4px;
+}
+
 .left-elements {
     min-width: 210px;
     position: relative;
