--- a/style/getEm.css
+++ b/style/getEm.css
@@ -573,7 +573,7 @@
     left: 80%;
     bottom: 0;
     right: 0;
-    z-index: 400;
+    z-index: 300;
     background-image: url(./img/pixel-heart.png);
     background-color: #000000;
     border: 0.4rem solid #e0e0e0;
@@ -642,7 +642,7 @@
 @media (min-width: 300px) and (max-width: 600px) {
     .note__text p {
         font-family: 'Garamond';
-        font-size: 1.025rem;
+        font-size: 16px;
         color: #4f4f4f;
         line-height: 1.5em;
    }
@@ -650,7 +650,7 @@
 @media (min-width: 600px) {
     .note__text p {
         font-family: 'Garamond';
-        font-size: 1.15rem;
+        font-size: 16px;
         color: #4f4f4f;
         line-height: 1.5em;
    }
